--- a/Alicargo/Views/ApplicationList/Index.cshtml
+++ b/Alicargo/Views/ApplicationList/Index.cshtml
@@ -10,7 +10,7 @@
 @Html.Partial("Tools")
 <div id="application-grid" class="grid"></div>
 <script type="text/x-kendo-template" id="application-grid-details">
-	@if (IdentityService.IsInRole(RoleType.Admin))
+	@if(IdentityService.IsInRole(RoleType.Admin) || IdentityService.IsInRole(RoleType.Manager))
 	{
 		@Html.Partial("AdminTemplate")
 	}
