--- a/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
+++ b/Alicargo/Views/AdminAwb/EditorTemplates/AwbAdminModel.cshtml
@@ -1,6 +1,4 @@
-﻿@using Alicargo.Core.Resources
-@using Alicargo.MvcHelpers.Extensions
-@using Resources
+﻿@using Alicargo.MvcHelpers.Extensions
 @inherits BaseWebViewPage<Alicargo.ViewModels.AirWaybill.AwbAdminModel>
 
 @helper Files()
