--- a/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
+++ b/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
@@ -1,55 +1,56 @@
 ﻿@model Alicargo.Areas.Admin.Models.BillSettingsModel
 
 <div class="bill-settings">
+	@Html.HiddenFor(x => x.Version)
 	<div class="row">
 		<div class="span12">
-			@Html.LabelFor(x => x.HeaderText, "Текст в начале:")
-			@Html.TextAreaFor(x => x.HeaderText, new { rows = 4 })
+			@Html.LabelFor(x => x.Data.HeaderText, "Текст в начале:")
+			@Html.TextAreaFor(x => x.Data.HeaderText, new { rows = 4 })
 		</div>
 	</div>
 	<div class="bank-details">
 		<table>
 			<tr>
-				<td colspan="4" rowspan="2" class="bank">@Html.TextAreaFor(x => x.Bank, new { rows = 3, cols = 100 })</td>
-				<td>@Html.LabelFor(x => x.BIC, "БИК")</td>
-				<td>@Html.EditorFor(x => x.BIC)</td>
+				<td colspan="4" rowspan="2" class="bank">@Html.TextAreaFor(x => x.Data.Bank, new { rows = 3, cols = 100 })</td>
+				<td>@Html.LabelFor(x => x.Data.BIC, "БИК")</td>
+				<td>@Html.EditorFor(x => x.Data.BIC)</td>
 			</tr>
 			<tr>
-				<td rowspan="2" class="title">@Html.LabelFor(x => x.CorrespondentAccount, "Сч. №")</td>
-				<td rowspan="2">@Html.TextAreaFor(x => x.CorrespondentAccount, new { rows = 3, cols = 100 })</td>
+				<td rowspan="2" class="title">@Html.LabelFor(x => x.Data.CorrespondentAccount, "Сч. №")</td>
+				<td rowspan="2">@Html.TextAreaFor(x => x.Data.CorrespondentAccount, new { rows = 3, cols = 100 })</td>
 			</tr>
 			<tr>
-				<td colspan="4" class="info">@Html.LabelFor(x => x.Bank, "Банк получателя")</td>
+				<td colspan="4" class="info">@Html.LabelFor(x => x.Data.Bank, "Банк получателя")</td>
 			</tr>
 			<tr>
-				<td>@Html.LabelFor(x => x.TIN, "ИНН")</td>
-				<td>@Html.EditorFor(x => x.TIN)</td>
-				<td>@Html.LabelFor(x => x.TaxRegistrationReasonCode, "КПП")</td>
-				<td class="trrc">@Html.EditorFor(x => x.TaxRegistrationReasonCode)</td>
-				<td rowspan="3">@Html.LabelFor(x => x.CurrentAccount, "Сч. №")</td>
-				<td rowspan="3">@Html.TextAreaFor(x => x.CurrentAccount, new { rows = 4, cols = 100 })</td>
+				<td>@Html.LabelFor(x => x.Data.TIN, "ИНН")</td>
+				<td>@Html.EditorFor(x => x.Data.TIN)</td>
+				<td>@Html.LabelFor(x => x.Data.TaxRegistrationReasonCode, "КПП")</td>
+				<td class="trrc">@Html.EditorFor(x => x.Data.TaxRegistrationReasonCode)</td>
+				<td rowspan="3">@Html.LabelFor(x => x.Data.CurrentAccount, "Сч. №")</td>
+				<td rowspan="3">@Html.TextAreaFor(x => x.Data.CurrentAccount, new { rows = 4, cols = 100 })</td>
 			</tr>
 			<tr>
-				<td colspan="4" class="bank">@Html.TextAreaFor(x => x.Payee, new { rows = 2, cols = 100 })</td>
+				<td colspan="4" class="bank">@Html.TextAreaFor(x => x.Data.Payee, new { rows = 2, cols = 100 })</td>
 			</tr>
 			<tr>
-				<td colspan="4" class="info">@Html.LabelFor(x => x.Payee, "Получатель")</td>
+				<td colspan="4" class="info">@Html.LabelFor(x => x.Data.Payee, "Получатель")</td>
 			</tr>
 		</table>
 	</div>
 	<div class="other-details">
 		<div class="row">
 			<div class="span4">
-				@Html.LabelFor(x => x.Shipper, "Поставщик:")
-				@Html.EditorFor(x => x.Shipper)
+				@Html.LabelFor(x => x.Data.Shipper, "Поставщик:")
+				@Html.EditorFor(x => x.Data.Shipper)
 			</div>
 			<div class="span4">
-				@Html.LabelFor(x => x.Head, "Руководитель:")
-				@Html.EditorFor(x => x.Head)
+				@Html.LabelFor(x => x.Data.Head, "Руководитель:")
+				@Html.EditorFor(x => x.Data.Head)
 			</div>
 			<div class="span4">
-				@Html.LabelFor(x => x.Accountant, "Бухгалтер:")
-				@Html.EditorFor(x => x.Accountant)
+				@Html.LabelFor(x => x.Data.Accountant, "Бухгалтер:")
+				@Html.EditorFor(x => x.Data.Accountant)
 			</div>
 		</div>
 	</div>
