--- a/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
+++ b/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
@@ -5,19 +5,19 @@
 	<div class="row">
 		<div class="span12">
 			@Html.LabelFor(x => x.Data.HeaderText, "Текст в начале:")
-			@Html.TextAreaFor(x => x.Data.HeaderText, new { rows = 4 })
+			@Html.TextAreaFor(x => x.Data.HeaderText, new { rows = 3 })
 		</div>
 	</div>
 	<div class="bank-details">
 		<table>
 			<tr>
-				<td colspan="4" rowspan="2" class="bank">@Html.TextAreaFor(x => x.Data.Bank, new { rows = 3, cols = 100 })</td>
+				<td colspan="4" rowspan="2" class="bank">@Html.TextAreaFor(x => x.Data.Bank, new { rows = 2, cols = 100 })</td>
 				<td>@Html.LabelFor(x => x.Data.BIC, "БИК")</td>
 				<td>@Html.EditorFor(x => x.Data.BIC)</td>
 			</tr>
 			<tr>
 				<td rowspan="2" class="title">@Html.LabelFor(x => x.Data.CorrespondentAccount, "Сч. №")</td>
-				<td rowspan="2">@Html.TextAreaFor(x => x.Data.CorrespondentAccount, new { rows = 3, cols = 100 })</td>
+				<td rowspan="2">@Html.TextAreaFor(x => x.Data.CorrespondentAccount, new { rows = 2, cols = 100 })</td>
 			</tr>
 			<tr>
 				<td colspan="4" class="info">@Html.LabelFor(x => x.Data.Bank, "Банк получателя")</td>
@@ -40,15 +40,13 @@
 	</div>
 	<div class="other-details">
 		<div class="row">
-			<div class="span4">
+			<div class="span8">
 				@Html.LabelFor(x => x.Data.Shipper, "Поставщик:")
-				@Html.EditorFor(x => x.Data.Shipper)
+				@Html.TextAreaFor(x => x.Data.Shipper)
 			</div>
 			<div class="span4">
 				@Html.LabelFor(x => x.Data.Head, "Руководитель:")
 				@Html.EditorFor(x => x.Data.Head)
-			</div>
-			<div class="span4">
 				@Html.LabelFor(x => x.Data.Accountant, "Бухгалтер:")
 				@Html.EditorFor(x => x.Data.Accountant)
 			</div>
