--- a/Alicargo/Content/app/layout.css
+++ b/Alicargo/Content/app/layout.css
@@ -19,10 +19,15 @@ footer {
 	background-color: #f5f5f5;
 }
 
-.container .credit {
-	margin: 20px auto;
-	text-align: center;
+.container {
+	padding: 0 20px;
+	width: auto;
 }
+
+	.container .credit {
+		margin: 20px auto;
+		text-align: center;
+	}
 
 hr {
 	margin-top: 10px;
@@ -32,9 +37,9 @@ h1 {
 	font-size: 1.5em;
 }
 
-h1 span{
-	float: right;
-}
+	h1 span {
+		float: right;
+	}
 
 h2 {
 	font-size: 1.4em;
