--- a/Alicargo/Views/Application/Create.cshtml
+++ b/Alicargo/Views/Application/Create.cshtml
@@ -2,9 +2,10 @@
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationAdminModel
-
-<h1>
-	@Pages.ApplicationAdd
-	<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
-</h1>
-@Html.EditPage(Url.Action(MVC.Application.Create()), Pages.ApplicationAdd)
+<div class="container-edit">
+	<h1>
+		@Pages.ApplicationAdd
+		<span>@Entities.Nic: @Html.ViewBag.ClientNic</span>
+	</h1>
+	@Html.EditPage(Url.Action(MVC.Application.Create()), Pages.ApplicationAdd)
+</div>
