--- a/Alicargo/Views/Balance/Increase.cshtml
+++ b/Alicargo/Views/Balance/Increase.cshtml
@@ -2,9 +2,11 @@
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.Calculation.Admin.PaymentModel
-<h1>
-	@Pages.BalanceIncrease: @ViewBag.Nic,
-	@Entities.Balance: @ViewBag.Balance.ToString("N2")
-</h1>
-@Html.EditPage(Url.Action(MVC.Balance.Increase((long)ViewBag.ClientId)), Pages.Add)
-@Html.Action(MVC.Balance.History((long)ViewBag.ClientId))
+<div class="container-edit">
+	<h1>
+		@Pages.BalanceIncrease: @ViewBag.Nic,
+		@Entities.Balance: @ViewBag.Balance.ToString("N2")
+	</h1>
+	@Html.EditPage(Url.Action(MVC.Balance.Increase((long)ViewBag.ClientId)), Pages.Add)
+	@Html.Action(MVC.Balance.History((long)ViewBag.ClientId))
+</div>
