--- a/Alicargo/Views/ClientApplication/Edit.cshtml
+++ b/Alicargo/Views/ClientApplication/Edit.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationClientModel
-<h1>
-	@Pages.ApplicationEdit @ViewBag.ApplicationNumber
-</h1>
-@Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update,
+<div class="container-edit">
+	<h1>
+		@Pages.ApplicationEdit @ViewBag.ApplicationNumber
+	</h1>
+	@Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update,
 	Html.ActionLink(Pages.Files, MVC.Files.ClientApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
+</div>
