--- a/Alicargo/Views/Forwarder/Create.cshtml
+++ b/Alicargo/Views/Forwarder/Create.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.User.ForwarderModel
-
-<h1>
-	@Pages.Add
-</h1>
-@Html.EditPage(Url.Action(MVC.Forwarder.Create()), Pages.Save)
+<div class="container-edit">
+	<h1>
+		@Pages.Add
+	</h1>
+	@Html.EditPage(Url.Action(MVC.Forwarder.Create()), Pages.Save)
+</div>
