--- a/Alicargo/Views/Forwarder/Edit.cshtml
+++ b/Alicargo/Views/Forwarder/Edit.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.User.ForwarderModel
-<h1>
-	@Pages.Edit
-</h1>
-@Html.EditPage(Url.Action(MVC.Forwarder.Edit()), Pages.Save)
+<div class="container-edit">
+	<h1>
+		@Pages.Edit
+	</h1>
+	@Html.EditPage(Url.Action(MVC.Forwarder.Edit()), Pages.Save)
+</div>
