--- a/Alicargo/Views/Sender/Edit.cshtml
+++ b/Alicargo/Views/Sender/Edit.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.User.SenderModel
-<h1>
-	@Pages.SenderEdit
-</h1>
-@Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save)
+<div class="container-edit">
+	<h1>
+		@Pages.SenderEdit
+	</h1>
+	@Html.EditPage(Url.Action(MVC.Sender.Edit()), Pages.Save)
+</div>
