--- a/Alicargo/Views/SenderAwb/Edit.cshtml
+++ b/Alicargo/Views/SenderAwb/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.AirWaybill.AwbSenderModel
-
-@Html.EditPage(Url.Action(MVC.SenderAwb.Edit()), Pages.Save)
+<div class="container-edit">
+	@Html.EditPage(Url.Action(MVC.SenderAwb.Edit()), Pages.Save)
+</div>
