--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -52,6 +52,7 @@
 				<li>@Html.ActionLink(Pages.Templates, MVC.EmailTemplate.Index())</li>
 				<li>@Html.ActionLink(Pages.Cities, MVC.City.Index())</li>
 				<li>@Html.ActionLink(Pages.Countries, MVC.Country.Index())</li>
+				<li>@Html.ActionLink(Pages.BillSettings, MVC.Admin.BillSettings.Index())</li>
 			</ul>
 		</li>
 	}
