--- a/Alicargo/Views/State/Create.cshtml
+++ b/Alicargo/Views/State/Create.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model Alicargo.ViewModels.State.StateCreateModel
-<h1>
-	@Pages.StateAdd
-</h1>
-@Html.EditPage(Url.Action(MVC.State.Create()), Pages.StateAdd)
+<div class="container-edit">
+	<h1>
+		@Pages.StateAdd
+	</h1>
+	@Html.EditPage(Url.Action(MVC.State.Create()), Pages.StateAdd)
+</div>
