--- a/Alicargo/Views/Files/SenderApplication.cshtml
+++ b/Alicargo/Views/Files/SenderApplication.cshtml
@@ -1,25 +1,25 @@
 ﻿@using Alicargo.DataAccess.Contracts.Enums
 @using Alicargo.Mvc
 @using Resources
-
-<h1>
-	@Pages.Application @ViewBag.ApplicationId
-</h1>
-<div class="row">
-	<div class="span4">
-		@Html.Partial("FilesHolder", ApplicationFileType.Invoice)
+<div class="container-edit">
+	<h1>
+		@Pages.Application @ViewBag.ApplicationId
+	</h1>
+	<div class="row">
+		<div class="span4">
+			@Html.Partial("FilesHolder", ApplicationFileType.Invoice)
+		</div>
+		<div class="span4">
+			@Html.Partial("FilesHolder", ApplicationFileType.Packing)
+		</div>
+		<div class="span4">
+			@Html.Partial("FilesHolder", ApplicationFileType.Swift)
+		</div>
 	</div>
-	<div class="span4">
-		@Html.Partial("FilesHolder", ApplicationFileType.Packing)
-	</div>
-	<div class="span4">
-		@Html.Partial("FilesHolder", ApplicationFileType.Swift)
-	</div>
+	<p>
+		<a href="@Url.Action(MVC.SenderApplication.Edit((long) ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
+	</p>
 </div>
-<p>
-	<a href="@Url.Action(MVC.SenderApplication.Edit((long) ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
-</p>
-
 @section scripts
 {
 	@Scripts.Render(JsPaths.FilesJs)
