--- a/Alicargo/Views/SenderApplication/Edit.cshtml
+++ b/Alicargo/Views/SenderApplication/Edit.cshtml
@@ -2,10 +2,11 @@
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
 @model ApplicationSenderModel
-
-<h1>
-	@Pages.ApplicationEdit @ViewBag.ApplicationNumber
-	<span>@Entities.Nic: @ViewBag.Nic</span>
-</h1>
-@Html.EditPage(Url.Action(MVC.SenderApplication.Edit()), Pages.Save,
+<div class="container-edit">
+	<h1>
+		@Pages.ApplicationEdit @ViewBag.ApplicationNumber
+		<span>@Entities.Nic: @ViewBag.Nic</span>
+	</h1>
+	@Html.EditPage(Url.Action(MVC.SenderApplication.Edit()), Pages.Save,
 	Html.ActionLink(Pages.Files, MVC.Files.SenderApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
+</div>
