--- a/Alicargo/Views/StateSettings/Index.cshtml
+++ b/Alicargo/Views/StateSettings/Index.cshtml
@@ -2,8 +2,7 @@
 @using Alicargo.DataAccess.Contracts.Resources
 @using Resources
 @model Alicargo.ViewModels.State.StateSettingsModel
-
-<div class="template-edit-settings">
+<div class="template-edit-settings container-edit">
 	<b>
 		@ViewBag.StateName
 	</b>
